--- a/home-finder/package.json
+++ b/home-finder/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "tailwind-merge": "^1.14.0",
