--- a/home-finder/package.json
+++ b/home-finder/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
